--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -14,3 +14,7 @@
       <%= f.submit "Add Dish" %>
     <% end %>
   </section>
+
+  <section id="ingredients">
+    <%= link_to "My Ingredients", chef_ingredients_path(@chef) %>
+  </section>
